Swagger integration adding PatientService, KafkaConsumerService and IoTDataSimulatorService
Swagger integration adding PatientService, KafkaConsumerService and IoTDataSimulatorService

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -131,3 +131,22 @@ management:
     health:
       show-details: always
       show-components: always
+
+# Swagger/OpenAPI Configuration
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operations-sorter: method
+    tags-sorter: alpha
+    display-request-duration: true
+    filter: true
+  show-actuator: true
+  default-produces-media-type: application/json
+  default-consumes-media-type: application/json
+
+# Enable Swagger in specific profiles
+spring:
+  profiles:
+    include: swagger
